Fixed box-sizing overlaping on 'compare to' list on graphic

--- a/appengine/Templates/css/main.css
+++ b/appengine/Templates/css/main.css
@@ -2,4 +2,9 @@
   width: 90%;
   height: 500px;
   margin: auto; /*Auto center horizontally*/
+  box-sizing: content-box;  
+}
+
+.amcharts-compare-item-div{
+	box-sizing: content-box;  
 }
